--- a/survay-feedback/src/app/pages/responder/responder.component.html
+++ b/survay-feedback/src/app/pages/responder/responder.component.html
@@ -5,3 +5,11 @@
         <div class="text-center">Fill out survey</div>
     </div>
 </a>
+<a class="col-sm-3" routerLink="/previousResponses">
+    <div class="panel panel-default custom-panel margin-bottom-50">
+        <div class="panel-body text-center remove-underline"><h3><span class="glyphicon glyphicon-bookmark"></span><br/>Previous Responses</h3></div>
+        <div class="divider"></div>
+        <div class="text-center">View Previous Filled Survey Responses</div>
+    </div>
+</a>
+
